<resources>
    <string name="app_name">CustomWallPaper</string>
    <string name="text_start">开始</string>
    <string name="permission_get">提示</string>
    <string name="permission_desc">亲：为了应用可以使用，请同意这些权限</string>
    <string name="text_read">读写权限</string>
    <string name="text_read_phone_state">手机状态权限</string>
    <string name="text_select_image">选择图片</string>
    <string name="text_select_video">选择视频</string>
    <string name="text_wallpaper">壁纸</string>
    <string name="text_set_wallpaper_success">亲：壁纸设置成功了</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_node">日记</string>
    <string name="text_home">首页</string>
    <string name="text_myself">我的</string>
    <string name="text_image">图片</string>
    <string name="text_back">返回</string>
    <string name="text_stay">亲：敬请期待</string>
    <string name="text_setting">设置</string>
    <string name="text_wanlan">Wifi服务已开启</string>
    <string name="text_wifi_tips">http://0.0.0.0:0000</string>
    <string name="text_cancel">取消</string>
    <string name="text_set_network">设置网络</string>
    <string name="pls_check_network_state">请检查您的网络设置</string>
    <string name="fail_to_start_http_service">启动HTTP服务失败</string>
    <string name="text_wanlan_unless">WLAN服务未开启</string>
    <string name="retrofit_wlan_address">正在获取地址...</string>
    <string name="http_address">http://%1$s:%2$d</string>
    <string name="pls_input_the_following_address_in_pc_browser">请在电脑浏览器地址栏完整输入</string>
    <string name="text_app">App列表</string>
    <string name="text_default">默认</string>
    <string name="text_default_number">15</string>
    <string name="text_install">安装</string>
    <string name="text_uninstall">卸载</string>
    <string name="text_open">打开该年</string>
    <string name="text_close">关闭该年</string>
    <string name="text_edit">编辑</string>
    <string name="text_share">分享</string>
    <string name="text_delete">删除</string>
    <string name="text_download">下载</string>
    <string name="text_story">故事</string>
    <string name="text_no_name">未命名</string>
    <string name="text_contact">联系人</string>
    <string name="text_night_model">夜间模式</string>
    <string name="text_change_bg">更改背景</string>
    <string name="text_done">完成</string>
    <string name="text_day">天数</string>
    <string name="text_love">喜欢</string>
    <string name="text_add_photo">添加方式</string>
    <string name="text_photo_library">相册</string>
    <string name="text_camera">相机</string>
    <string name="text_hint_content">搜索标题、内容、地点、位置</string>
    <string name="text_contact_msg">好友验证消息</string>
    <string name="text_contact_list">好友列表</string>
    <string name="text_hint_contact">输入手机号/邮箱</string>
    <string name="text_contacts">通讯录</string>
    <string name="text_search_contacts">查找通讯录里面的好友</string>
    <string name="text_scan">扫一扫</string>
    <string name="text_search_scan">扫描二维码名片添加好友</string>
    <string name="text_weChat">微信</string>
    <string name="text_search_weChat">邀请你微信中的好友</string>
    <string name="text_qq">QQ</string>
    <string name="text_search_qq">邀请你QQ中的好友</string>
    <string name="text_contact_friends">通讯录好友</string>
    <string name="text_invite_contact">邀请好友加入</string>
    <string name="text_invite">邀请</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_sex">性别</string>
    <string name="text_birthday">生日</string>
    <string name="text_area">地区</string>
    <string name="text_description">简介</string>
    <string name="text_choose_sex">选择性别</string>
    <string name="text_boy">男</string>
    <string name="text_girl">女</string>
    <string name="text_confirm">确认</string>
    <string name="text_choose_area">城市选择</string>
    <string name="text_province">陕西省</string>
    <string name="text_city">西安市</string>
    <string name="text_discrict">鄠邑区</string>
</resources>
