<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_wifi_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/text_wanlan"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/txt_wifi_subtitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:text="@string/pls_check_network_state"
        android:textSize="@dimen/sp_12"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_wifi_state"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txt_wifi_state_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text=""
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txt_wifi_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/text_wifi_tips"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wifi_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cancel" />

        <View
            android:id="@+id/shared_wifi_button_split_line"
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_wifi_setting"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_set_network"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>
