<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yk.silence.toolbar.CustomTitleBar
        android:id="@+id/title_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImage="@drawable/ic_back"
        app:middleTextColor="@color/colorBlue"
        app:middleTextSize="@dimen/sp_16"
        app:middleTitle="@string/text_contact"
        app:rightImage="@drawable/ic_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/edit_all_corner"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_add_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@null"
            android:focusable="auto"
            android:gravity="center"
            android:hint="@string/text_hint_contact"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ryt_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_contact"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_add_contact" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_contacts"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/text_search_contacts"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_scan"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_scan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_scan"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_scan"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/text_search_scan"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_weChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_weChat"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_wechat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_weChat"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_weChat"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/text_search_weChat"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_qq"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_qq" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_qq"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_qq"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/text_search_qq"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>