<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/layout_background_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_add_photo"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_12"
            app:fontFamily="@font/montserrat_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/txt_dialog_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_photo_library"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_16"
            app:fontFamily="@font/montserrat_bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/txt_dialog_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_camera"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            app:fontFamily="@font/montserrat_bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/layout_background_corner"
        android:gravity="center"
        android:text="@string/text_cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_16"
        app:fontFamily="@font/montserrat_bold"/>


</LinearLayout>