<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yk.silence.toolbar.CustomTitleBar
        android:id="@+id/title_contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImage="@drawable/ic_back"
        app:middleTextColor="@color/colorBlack"
        app:middleTextSize="@dimen/sp_16"
        app:middleTitle="@string/text_contact_friends" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/edit_all_corner"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_search_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@null"
            android:focusable="auto"
            android:hint="@string/text_hint_contact"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorGrayLight"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:text="@string/text_invite_contact"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_12" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_contact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_10">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv_invite_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>