<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="@dimen/dp_240"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:clickable="true">

        <RelativeLayout
            android:id="@+id/ryt_mine_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_140"
            android:background="@color/colorBlue">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_mine_avatar"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_toEndOf="@+id/img_mine_avatar"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_mine_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_16"
                    app:fontFamily="@font/fzlantingheis_db1_gb_regular" />

                <TextView
                    android:id="@+id/txt_mine_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/sp_14"
                    app:fontFamily="@font/fzlantingheis_regular" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_mine_contact"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:gravity="center_vertical"
            android:layout_below="@+id/ryt_mine_title"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:drawableStart="@drawable/ic_open"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/text_contact"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_14"
            app:fontFamily="@font/fzlantingheis_regular" />

        <TextView
            android:id="@+id/txt_mine_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_20"
            android:drawableStart="@drawable/ic_open"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/text_setting"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_14"
            app:fontFamily="@font/fzlantingheis_regular" />

        <TextView
            android:id="@+id/txt_mine_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_20"
            android:drawableStart="@drawable/ic_open"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/text_night_model"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_14"
            app:fontFamily="@font/fzlantingheis_regular" />

    </RelativeLayout>


</merge>
