<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_myself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_myself"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_myself_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_myself_avatar"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_40"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/txt_myself_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_40"
                        android:text="@string/text_default_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_5"
                        android:text="@string/text_day"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/txt_myself_love"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_40"
                        android:text="@string/text_default_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_5"
                        android:text="@string/text_love"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/sp_12" />
                </LinearLayout>
            </FrameLayout>

            <com.yk.silence.toolbar.CustomTitleBar
                android:id="@+id/title_myself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/ic_back"
                app:rightTextColor="@color/colorWhite"
                app:rightTextSize="@dimen/sp_12"
                app:rightTitle="@string/text_change_bg" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_myself"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/colorWhite"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorBlue"
            app:tabRippleColor="@color/colorTransparent"
            app:tabSelectedTextColor="@color/colorBlue"
            app:tabTextColor="@color/colorBlack" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_myself"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>